@@ -1,0 +1,10 @@
+package Log::Contextual::Role::Router::HasLogger;
+
+# ABSTRACT: Abstract interface between loggers and logging code blocks
+
+use Moo::Role;
+
+requires 'has_logger';
+
+1;
+
